# fastapi-backend

./: .env.example  README.md  init_db.txt  manage.py  pyproject.toml  server.py
.github/workflows/: python-app.yml
core/: celery_worker.py  logging_config.py  models.py  oauth2_password_bearer.py  schema.py  security.py
migrations/models/: 1_20250915174043_update.py  2_20250915174118_update.py  3_20250916123954_update.py
powervs_backend/: config.py  urls.py
tests/: test_main.py
users/: current_user.py  models.py  schema.py  urls.py  views.py
