[project]
name = "powervs-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich[toml]>=0.9.1",
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "tortoise-orm[aiomysql]>=0.25.1",
    "uvicorn>=0.35.0",
]

[tool.aerich]
tortoise_orm = "core.config.tortoise_config"
location = "./migrations"
src_folder = "./."
